--- a/src/app/price-list/price-list.page.html
+++ b/src/app/price-list/price-list.page.html
@@ -16,7 +16,7 @@
       <ion-grid *ngIf="pricesLoaded" style="text-align: center">
         <ion-row class="item-list-border">
           <ion-col size="1.5" style="border-right: solid">
-            Colonies
+            Solar Body
           </ion-col>
           <ion-col style="text-align: center;">
             Items
@@ -28,7 +28,7 @@
             <ion-grid (click)="sort('name', sortOrder= !sortOrder)" style="cursor: pointer; color: lightblue">
               <ion-row>
                 <ion-col>
-                  Colony
+                  Solar Body Name
                   <span *ngIf="sortField === 'name'">
                     <ion-icon *ngIf="sortOrder === false" name="arrow-up-circle-outline"></ion-icon>
                     <ion-icon *ngIf="sortOrder === true" name="arrow-down-circle-outline"></ion-icon>
@@ -69,7 +69,7 @@
             <ion-grid>
               <ion-row>
                 <ion-col>
-                  <span (click)="viewColony(aColony)" style="color: lightblue;cursor: pointer">{{aColony.name}}</span>
+                  <span (click)="viewSolarBody(aColony)" style="color: lightblue;cursor: pointer">{{aColony.name}}</span>
                 </ion-col>
               </ion-row>
             </ion-grid>
