--- a/src/app/colonies/colony/colony.page.html
+++ b/src/app/colonies/colony/colony.page.html
@@ -1,74 +1,60 @@
 <!--This page should always be included in another page.-->
 
-<ion-grid *ngIf="foundColony; else noColony" class="ut-item-background-color">
+<ion-grid *ngIf="uniS.aSolarBody.colony; else noColony" class="ut-item-background-color">
   <ion-row>
     <ion-col>
       <ion-card>
-        <ion-card-header>
-          <ion-card-title>Colony Details</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <ion-grid>
-            <ion-row>
-              <ion-col *ngFor="let col of colonyS.aColoniesTableColumns">
-                <ion-item>
-                  <ion-note slot="helper">{{col.label}}</ion-note>
-                  <ion-label>{{colonyS.aColony[col.filter]}}</ion-label>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-    <ion-col>
-      <ion-card *ngIf="ssLoaded">
-        <ion-card-header>
-          <ion-card-title>Solar System Details</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <ion-grid>
-            <ion-row>
-              <ion-col *ngFor="let col of colonyS.aSSTableColumns">
-                <ion-item>
-                  <ion-note slot="helper">{{col.label}}</ion-note>
-                  <ion-label>
-                    <span *ngIf="col.filter === 'coordinates'; else normalSS">
-                      {{colonyS.aSolarSystem.xCoordinate}}, {{colonyS.aSolarSystem.yCoordinate}}
-                    </span>
-                    <ng-template #normalSS>
-                      {{colonyS.aSolarSystem[col.filter]}}
-                    </ng-template>
-                  </ion-label>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-          </ion-grid>
-        </ion-card-content>
-      </ion-card>
-    </ion-col>
-    <ion-col>
-      <ion-card *ngIf="sbLoaded">
         <ion-card-header>
           <ion-card-title>Solar Body Details</ion-card-title>
         </ion-card-header>
         <ion-card-content>
           <ion-grid>
             <ion-row>
-              <ion-col *ngFor="let col of colonyS.aSBTableColumns">
+              <ion-col *ngFor="let col of uniS.aSBTableColumns">
                 <ion-item>
-                  <ion-note slot="helper">{{col.label}}</ion-note>
-                  <ion-label>
+                  <ion-label position="stacked">{{col.label}}</ion-label>
+                  <ion-item class="ion-no-padding" lines="none">
+                    <ion-label>
                     <span *ngIf="col.filter === 'coordinates'">
-                      {{colonyS.aSolarBody.xCoordinate}}, {{colonyS.aSolarBody.yCoordinate}}
+                      {{uniS.aSolarBody.xCoordinate}}, {{uniS.aSolarBody.yCoordinate}}
                     </span>
-                    <span *ngIf="col.filter === 'resourceOne' || col.filter === 'resourceTwo'">
-                      {{colonyS.aSolarBody[col.filter]}} <span *ngIf="colonyS.aSolarBody[col.filter] === 'ore' || colonyS.aSolarBody[col.filter] === 'silicone' || colonyS.aSolarBody[col.filter] === 'power'">- {{colonyS.aSolarBody[col.filter+'Yield']}}% Yield</span>
+                      <span *ngIf="col.filter === 'resourceOne' || col.filter === 'resourceTwo'">
+                      {{uniS.aSolarBody[col.filter]}} <span *ngIf="uniS.aSolarBody[col.filter] === 'ore' || uniS.aSolarBody[col.filter] === 'silicone' || uniS.aSolarBody[col.filter] === 'power'">- {{uniS.aSolarBody[col.filter+'Yield']}}% Yield</span>
                     </span>
-                    <span *ngIf="col.filter !== 'resourceOne' && col.filter !== 'resourceTwo' && col.filter !== 'coordinates'">
-                      {{colonyS.aSolarBody[col.filter]}}
+                      <span *ngIf="col.filter !== 'resourceOne' && col.filter !== 'resourceTwo' && col.filter !== 'coordinates'">
+                      {{uniS.aSolarBody[col.filter]}}
                     </span>
-                  </ion-label>
+                    </ion-label>
+                  </ion-item>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+
+    <ion-col>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Solar System Details</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-grid>
+            <ion-row>
+              <ion-col *ngFor="let col of uniS.aSSTableColumns">
+                <ion-item>
+                  <ion-label position="stacked">{{col.label}}</ion-label>
+                  <ion-item class="ion-no-padding" lines="none">
+                    <ion-label>
+                      <span *ngIf="col.filter === 'coordinates'; else normalSS">
+                        {{uniS.aSolarSystem.xCoordinate}}, {{uniS.aSolarSystem.yCoordinate}}
+                      </span>
+                      <ng-template #normalSS>
+                        {{uniS.aSolarSystem[col.filter]}}
+                      </ng-template>
+                    </ion-label>
+                  </ion-item>
                 </ion-item>
               </ion-col>
             </ion-row>
